cambiando tipo .html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración  continua </li>
+         <li> Integración continua </li>
+         <li> Integración continua madurez</li>
      </ul>
 </body>
 </html>
